# hermes

./: .env.miner.example  .env.validator.example  .gitignore  README.md  min_compute.yml  pyproject.toml
agent/: graphql_agent.py  stats.py
agent/subquery_graphql_agent/: __init__.py  base.py  graphql.py  node_types.py  project.py  thegraph_tools.py  tools.py
cli/: replay.py
common/: agent_manager.py  bloom.py  enums.py  logger.py  meta_config.py  mock_config.py  project_manager.py  prompt_injection_defense.py  prompt_template.py  protocol.py  settings.py  sqlite_manager.py  stats_miner.html  stats_validator.html  table_formatter.py  timer.py  utils.py
docs/: highlevel-synthetic-challenges.md  incentive.md  litepaper.md  local_test.md  miner-architecture.md  miner.md  run-behind-proxy.md  running_on_testnet.md  validator.md
hermes/: base.py
hermes/validator/: api.py  benchmark.py  challenge_manager.py  dendrite.py  ema.py  multiprocess_query.py  question_generator.py  scorer_manager.py  workload_manager.py
neurons/: miner.py  validator.py
projects/miner/QmfUNJC1Qz8m3F67sQmxrwjuSAu4WaCR1iBdPPdzBruQ7P_00021a18/: config.json  tools.py
projects/miner/codex_de839e3d/: full_schema.graphql  query.graphql  tools.py
projects/validator/codex_de839e3d/: config.json  full_schema.graphql  query.graphql
scripts/: ground_truth.py  mock_validator.py  pull_project_from_cid.py  synthetic_generate.py
tests/: diff.test.py
